--- a/classes/Application.cls
+++ b/classes/Application.cls
@@ -174,4 +174,5 @@ public List<SObject> myDummyMethod(List<SObject> relatedRecords, SObjectField re
 			this.exceptionCode = exceptionCode;
 		}
 	}	
+	//Test Git comment.
 }
