--- a/classes/Application.cls
+++ b/classes/Application.cls
@@ -164,4 +164,9 @@ public List<SObject> myDummyMethod(List<SObject> relatedRecords, SObjectField re
 			this.exceptionCode = exceptionCode;
 		}
 	}	
+	
+	public class testLoad
+	{
+	
+	}
 }
