Test Comment in ApplicationUnitOfWork.

--- a/classes/ApplicationUnitOfWork.cls
+++ b/classes/ApplicationUnitOfWork.cls
@@ -9,3 +9,5 @@ public class ApplicationUnitOfWork extends fflib_SObjectUnitOfWork
 			  	  Contestant__c.SObjectType });	
 	}
 }
+
+//Test Comment for TortoiseGit.
