--- a/classes/ApplicationUnitOfWork.cls
+++ b/classes/ApplicationUnitOfWork.cls
@@ -10,4 +10,4 @@ public class ApplicationUnitOfWork extends fflib_SObjectUnitOfWork
 	}
 }
 
-//Test Comment for TortoiseGit.
+//Test Comment for TortoiseGit.//
