--- a/classes/ApplicationUnitOfWork.cls
+++ b/classes/ApplicationUnitOfWork.cls
@@ -8,4 +8,7 @@ public class ApplicationUnitOfWork extends fflib_SObjectUnitOfWork
 			  	  Race__c.SObjectType, 
 			  	  Contestant__c.SObjectType });	
 	}
+	public class workerctrl
+	{
+	}
 }
