--- a/classes/ApplicationUnitOfWork.cls
+++ b/classes/ApplicationUnitOfWork.cls
@@ -11,6 +11,8 @@ public class ApplicationUnitOfWork extends fflib_SObjectUnitOfWork
 	public class workerctrl
 	{
 	}
-}}
-
-//Test Comment for TortoiseGit.//
+	public class workerCtrlOne{
+	
+	}
+	//Test Comment for TortoiseGit.//
+}
