--- a/classes/ApplicationUnitOfWork.cls
+++ b/classes/ApplicationUnitOfWork.cls
@@ -11,4 +11,8 @@ public class ApplicationUnitOfWork extends fflib_SObjectUnitOfWork
 
 	public class ApplicationUnitOfWorkWrapper{
 	}
+	
+	public class ApplicationUnitOfWorkWrapperOne{
+	}
+	
 }
